--- a/action.yaml
+++ b/action.yaml
@@ -9,7 +9,11 @@ inputs:
   dest-branch:
     description: 'What branch is acting as the destination of the merger'
     required: false
-    default: 'develop'
+    default: ${{ github.event.repository.default_branch }}
+  submodules:
+    description: 'Whether to checkout submodules'
+    required: false
+    default: 'false'
   commit-message:
     description: 'The commit message to use for the merge'
     required: false
@@ -26,13 +30,27 @@ runs:
   using: 'composite'
   steps:
     - uses: actions/checkout@v2
+      with:
+        token: ${{ inputs.token }}
+        submodules: ${{ inputs.submodules }}
+    - name: Source Branch
+      id: src-branch
+      run: |
+        if [ -n "${{ inputs.src-branch }}" ]; then
+          echo "::set-output name=branch::${{ inputs.src-branch }}"
+        elif [ "${{ github.event_name }}" = "push" ]; then
+          echo "::set-output name=branch::${{ github.ref_name }}"
+        else
+          echo "::set-output name=branch::main"
+        fi
+      shell: bash
     - name: Commit Message
       id: message
       run: |
         if [ -n "${{ inputs.commit-message }}" ]; then
           echo "::set-output name=message::$(echo ${{ inputs.commit-message }} | sed 's|\"|\\\"|g')"
         else
-          echo "::set-output name=message::Merge branch '${{ inputs.src-branch }}' into '${{ inputs.dest-branch }}'"
+          echo "::set-output name=message::Merge branch '${{ steps.src-branch.outputs.branch }}' into '${{ inputs.dest-branch }}'"
         fi
       shell: bash
     - name: Merge
