--- a/action.yaml
+++ b/action.yaml
@@ -14,6 +14,9 @@ inputs:
     description: 'Whether to checkout submodules'
     required: false
     default: 'false'
+  token:
+    description: 'GitHub token'
+    required: false
   commit-message:
     description: 'The commit message to use for the merge'
     required: false
