--- a/action.yaml
+++ b/action.yaml
@@ -67,6 +67,7 @@ runs:
         git fetch
         # Ensure the branch exists locally
         git switch ${{ steps.src-branch.outputs.branch }}
+        git pull
         git switch ${{ inputs.dest-branch }}
         git merge ${{ steps.src-branch.outputs.branch }} -m "${{ steps.message.outputs.message }}" ${{ inputs.commit-flags }} || git commit --no-verify -am "${{ steps.message.outputs.message }}" || echo "Skipping commit"
         git push
