--- a/action.yaml
+++ b/action.yaml
@@ -69,6 +69,7 @@ runs:
         git switch ${{ steps.src-branch.outputs.branch }}
         git pull
         git switch ${{ inputs.dest-branch }}
+        git pull
         git merge ${{ steps.src-branch.outputs.branch }} -m "${{ steps.message.outputs.message }}" ${{ inputs.commit-flags }} || git commit --no-verify -am "${{ steps.message.outputs.message }}" || echo "Skipping commit"
         git push
       shell: bash
